discussion/kv_engine/136142/136142_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

wip

Change-Id: I74e8c3761473f7805413bb752239ed6d80ec07c6

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2020-09-14 08:20:49.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-09-14 08:50:13.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4484/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:408:52: error: use of undeclared identifier "db" [clang-diagnostic-error]
                        cb::couchstore::getHeader(*db.getDb()).deletedCount;
                                                   ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4484/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:408:52:
error: use of undeclared identifier "db" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4484/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/26283/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:408:52:
error: use of undeclared identifier "db"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/26283/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30374/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\couch-kvstore\couch-kvstore.cc(408): error C2065: "db": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30374/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4833/ : FAILURE

Compile error at [2020-09-14T08:22:19.175Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:408:52:
error: use of undeclared identifier "db"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4833/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5726/ : FAILURE

Compile error at [2020-09-14T08:47:58.188Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:408:52:
error: ?db? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5726/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5828/ : FAILURE

Compile error at [2020-09-14T08:41:31.908Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:408:52:
error: ?db? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5828/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5961/ : FAILURE

Compile error at [2020-09-14T08:32:42.759Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:408:52:
error: use of undeclared identifier "db"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5961/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/13641/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/3010/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
